# archaeologist

./: .dockerignore  .env.dev  .env.prod  .gitignore  AGENTS.md  ARCHITECTURE_GUIDE.md  CRUSH.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  README.md  USER_STORIES.md  debug-stop.sh  debug.sh  deploy.sh  dev.sh  docker-compose.yml  install.sh  start-ui.sh  test.sh
.clinerules/: README.md
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: DATA_LAKE.md  auth_service.py  config.py  data_lake_interface.py  disk_data_lake.py  job_client.py  job_manager.py  llm_interface.py  main.py  mock_llm.py  telemetry.py
api/app/routes/: auth.py  database.py  jobs.py  projects.py  scanner.py
api/app/scanner/: __init__.py  config.py
api/app/scanner/benchmarking/: __init__.py  models.py  prompts.py  run_benchmark.py
api/app/scanner/embeddings/: __init__.py
api/app/scanner/llm/: llm_interface.py  mock_llm.py
api/app/scanner/rag/: __init__.py  models.py  rag_service.py
api/app/scanner/text_processing/: chunker.py
api/app/scanner/tools/: __init__.py  qdrant_adapter.py  vector_db.py  vector_db_factory.py
api/app/tools/: __init__.py  rag_engine.py  vector_db_factory.py
api/db/: __init__.py  base.py  factory.py  sqlite.py
api/db/migrations/: 001_add_jobs_table.sql  001_initial_schema.sql  002_add_sources_metadata.sql  README.md  __init__.py  migration_manager.py
api/db/schema/: tables.sql
api/dependencies/: __init__.py  auth.py  database.py  middleware.py  telemetry.py
api/examples/: __init__.py  data_lake_usage.py
api/models/: database.py  jobs.py
api/tests/: test_archaeologist.py  test_consolidation.py  test_data_lake.py  test_job_processing.py  test_scanner_integration.py
scanner/: Dockerfile  RAG_IMPLEMENTATION.md  config.py  download_model.sh  main.py  pyproject.toml  requirements.txt  run_benchmark.py  telemetry.py
scanner/app/: __init__.py  benchmark.py  config.py  job_client.py  job_manager.py  logging_config.py  main.py
scanner/app/benchmarking/: results.py  tools.py
scanner/app/embeddings/: embedding_factory.py  embedding_interface.py  local_embedding.py
scanner/app/llm/: __init__.py  llm_interface.py  mock_llm.py
scanner/app/prompts/: __init__.py
scanner/app/prompts/analysis/: __init__.py  impact_analysis.py
scanner/app/prompts/investigation/: __init__.py  system_prompts.py
scanner/app/rag/: rag_service.py
scanner/app/text_processing/: __init__.py  preprocessor.py
scanner/app/tools/: __init__.py  registry.py  vector_db_factory.py
scanner/app/tools/analysis/: __init__.py
scanner/tests/: __init__.py  test_scanner.py
(+89 files in other folders)
