[project]
name = "scanner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "uvicorn>=0.38.0",
    "gunicorn==21.2.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2",
    "requests==2.31.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-otlp==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-instrumentation-httpx==0.42b0",
    "opentelemetry-instrumentation-requests==0.42b0",
    "opentelemetry-semantic-conventions==0.42b0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "aiofiles>=23.0.0",
    # RAG dependencies
    "llama-cpp-python>=0.2.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "openai==1.3.8",
]
